objects/District__c.object
<CustomObject>
    <fields>
        <fullName>Acct_Team_Action__c</fullName>
        <formula>HYPERLINK(&quot;/apex/StartAccountTeamSync?retId=&quot; + Id, &quot;Sync&quot;, &quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Team Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Team_Last_Synced_D_T__c</fullName>
        <label>Acct Team Last Synced D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Acct_Team_Last_Updated_D_T__c</fullName>
        <label>Acct Team Last Updated D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Allow_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit_PL__c</fullName>
        <label>Business Unit (PL)</label>
        <picklist>
            <picklistValues>
                <fullName>VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Districts</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_BU_Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>District/BU Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>District_Region_Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>District/Region Unique Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Related_State_Provinces__c</fullName>
        <label># Related State/Provinces</label>
        <summaryForeignKey>Related_State_Province__c.District__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_Related_Zip_Postal_Codes__c</fullName>
        <label># Related Zip/Postal Codes</label>
        <summaryForeignKey>Related_Zip_Postal_Code__c.District__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prior_8_Role_Value__c</fullName>
        <label>Prior 8 Role Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed_D_T__c</fullName>
        <label>Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Districts</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role_10_Prior_Value__c</fullName>
        <label>Role 10 Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_10_Processed_D_T__c</fullName>
        <label>Role 10 Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Role_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role 10</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Role_Definition__c.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>$Source.Business_Unit__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Role_Definition__c</referenceTo>
        <relationshipLabel>Districts (Role 10)</relationshipLabel>
        <relationshipName>Districts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_1_Prior_Value__c</fullName>
        <label>Role 1 Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_1_Processed_D_T__c</fullName>
        <label>Role 1 Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Role_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Role_Definition__c.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>$Source.Business_Unit__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Role_Definition__c</referenceTo>
        <relationshipLabel>Districts (Role 1)</relationshipLabel>
        <relationshipName>Districts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_2_Prior_Value__c</fullName>
        <label>Role 2 Prior Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_2_Processed_D_T__c</fullName>
        <label>Role 2 Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Role_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Role_Definition__c.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>$Source.Business_Unit__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Role_Definition__c</referenceTo>
        <relationshipLabel>Districts (Role 2)</relationshipLabel>
        <relationshipName>Districts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unknown_District__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unknown District</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_10_Prior_Value__c</fullName>
        <label>User 10 Prior Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_10_Processed_D_T__c</fullName>
        <label>User 10 Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User 10</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Business_Unit_PL__c</field>
                <operation>equals</operation>
                <valueField>User.Business_Unit__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Districts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_1_Prior_Value__c</fullName>
        <label>User 1 Prior Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_1_Processed_D_T__c</fullName>
        <label>User 1 Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Business_Unit_PL__c</field>
                <operation>equals</operation>
                <valueField>User.Business_Unit__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Districts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_2_Prior_Value__c</fullName>
        <label>User 2 Prior Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_2_Processed_D_T__c</fullName>
        <label>User 2 Processed D/T</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Business_Unit_PL__c</field>
                <operation>equals</operation>
                <valueField>User.Business_Unit__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Districts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Users_Active__c</fullName>
        <formula>IF(
   !ISBLANK(User_1__c) &amp;&amp; !User_1__r.IsActive,
   &quot;User 1 Inactive&quot;,
   IF(
      !ISBLANK(User_2__c) &amp;&amp; !User_2__r.IsActive,
      &quot;User 2 Inactive&quot;,
      IF(
         !ISBLANK(User_3__c) &amp;&amp; !User_3__r.IsActive,
         &quot;User 3 Inactive&quot;,
         IF(
            !ISBLANK(User_4__c) &amp;&amp; !User_4__r.IsActive,
            &quot;User 4 Inactive&quot;,
            IF(
               !ISBLANK(User_5__c) &amp;&amp; !User_5__r.IsActive,
               &quot;User 5 Inactive&quot;,
               &quot;ALL ACTIVE&quot;
            )
         )
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Users Active</label>
        <type>Text</type>
    </fields>
    <label>District</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Region__c</columns>
        <columns>Users_Active__c</columns>
        <columns>Acct_Team_Last_Updated_D_T__c</columns>
        <columns>Acct_Team_Last_Synced_D_T__c</columns>
        <columns>Processed_D_T__c</columns>
        <columns>Role_1_Processed_D_T__c</columns>
        <columns>Role_2_Processed_D_T__c</columns>
        <columns>Role_3_Processed_D_T__c</columns>
        <columns>User_1_Processed_D_T__c</columns>
        <columns>User_2_Processed_D_T__c</columns>
        <columns>User_3_Processed_D_T__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HAY_Districts</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Region__c</columns>
        <columns>Description__c</columns>
        <columns>Acct_Team_Last_Updated_D_T__c</columns>
        <columns>Acct_Team_Last_Synced_D_T__c</columns>
        <columns>Num_Related_State_Provinces__c</columns>
        <columns>Num_Related_Zip_Postal_Codes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>HAY</value>
        </filters>
        <label>HAY Districts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>VAT_Districts</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Region__c</columns>
        <columns>User_1__c</columns>
        <columns>User_2__c</columns>
        <columns>Acct_Team_Last_Updated_D_T__c</columns>
        <columns>Acct_Team_Last_Synced_D_T__c</columns>
        <columns>Num_Related_State_Provinces__c</columns>
        <columns>Num_Related_Zip_Postal_Codes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>VAT</value>
        </filters>
        <label>VAT Districts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>VAT_Regions_to_upload</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Region__c</columns>
        <columns>Description__c</columns>
        <columns>Acct_Team_Last_Updated_D_T__c</columns>
        <columns>Acct_Team_Last_Synced_D_T__c</columns>
        <columns>Num_Related_State_Provinces__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>VAT</value>
        </filters>
        <filters>
            <field>Allow_Deletion__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Num_Related_State_Provinces__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>VAT Regions to upload</label>
    </listViews>
    <listViews>
        <fullName>VIN_Districts</fullName>
        <columns>NAME</columns>
        <columns>Business_Unit__c</columns>
        <columns>Region__c</columns>
        <columns>Users_Active__c</columns>
        <columns>Num_Related_State_Provinces__c</columns>
        <columns>Num_Related_Zip_Postal_Codes__c</columns>
        <columns>User_1__c</columns>
        <columns>Role_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Business_Unit__c</field>
            <operation>equals</operation>
            <value>VIN</value>
        </filters>
        <label>VIN Districts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Z_Audit</fullName>
        <columns>NAME</columns>
        <columns>User_1__c</columns>
        <columns>Role_1__c</columns>
        <columns>User_2__c</columns>
        <columns>Role_2__c</columns>
        <columns>User_3__c</columns>
        <columns>Role_3__c</columns>
        <columns>User_4__c</columns>
        <columns>Role_4__c</columns>
        <columns>User_5__c</columns>
        <columns>Role_5__c</columns>
        <filterScope>Everything</filterScope>
        <label>Z - Audit</label>
    </listViews>
    <nameField>
        <label>District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Districts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Same_Role_on_Region</fullName>
        <active>false</active>
        <errorConditionFormula>OR(

Role_1__c = Role_2__c,

Role_1__c = Role_3__c,

Role_1__c = Role_4__c,

Role_1__c = Role_5__c,

Role_1__c = Role_6__c,

Role_1__c = Role_7__c,

Role_1__c = Role_8__c,

Role_1__c = Role_9__c,

Role_1__c = Role_10__c,

Role_2__c = Role_3__c,

Role_2__c = Role_4__c,

Role_2__c = Role_5__c,

Role_2__c = Role_6__c,

Role_2__c = Role_7__c,

Role_2__c = Role_8__c,

Role_2__c = Role_9__c,

Role_2__c = Role_10__c,

Role_3__c = Role_4__c,

Role_3__c = Role_5__c,

Role_3__c = Role_6__c,

Role_3__c = Role_7__c,

Role_3__c = Role_8__c,

Role_3__c = Role_9__c,

Role_3__c = Role_10__c,

Role_4__c = Role_5__c,

Role_4__c = Role_6__c,

Role_4__c = Role_7__c,

Role_4__c = Role_8__c,

Role_4__c = Role_9__c,

Role_4__c = Role_10__c,

Role_5__c = Role_6__c,

Role_5__c = Role_7__c,

Role_5__c = Role_8__c,

Role_5__c = Role_9__c,

Role_5__c = Role_10__c,

Role_6__c = Role_7__c,

Role_6__c = Role_8__c,

Role_6__c = Role_9__c,

Role_6__c = Role_10__c,

Role_7__c = Role_8__c,

Role_7__c = Role_9__c,

Role_7__c = Role_10__c,

Role_8__c = Role_9__c,

Role_8__c = Role_10__c,

Role_9__c = Role_10__c

)</errorConditionFormula>
        <errorMessage>Cannot have the same role on a single region</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Users_and_Roles_must_correspond</fullName>
        <active>true</active>
        <description>Each User entered must have a corresponding Role, and vice versa.</description>
        <errorConditionFormula>OR(

ISBLANK(User_1__c)&lt;&gt;ISBLANK(Role_1__c),

ISBLANK(User_2__c)&lt;&gt;ISBLANK(Role_2__c),

ISBLANK(User_3__c)&lt;&gt;ISBLANK(Role_3__c),

ISBLANK(User_4__c)&lt;&gt;ISBLANK(Role_4__c),

ISBLANK(User_5__c)&lt;&gt;ISBLANK(Role_5__c),

ISBLANK(User_6__c)&lt;&gt;ISBLANK(Role_6__c),

ISBLANK(User_7__c)&lt;&gt;ISBLANK(Role_7__c),

ISBLANK(User_8__c)&lt;&gt;ISBLANK(Role_8__c),

ISBLANK(User_9__c)&lt;&gt;ISBLANK(Role_9__c),

ISBLANK(User_10__c)&lt;&gt;ISBLANK(Role_10__c)

)</errorConditionFormula>
        <errorMessage>Each User entered must have a corresponding Role, and vice versa.</errorMessage>
    </validationRules>
</CustomObject>